[package]
name = "trillium-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2.5"
tracing = "0.1.35"
trillium = "0.2.2"

[dev-dependencies]
smol = "1.2.5"
tracing-subscriber = "0.3.14"
trillium-smol = "0.2.1"
trillium-router = "0.3.3"
